<resources>

    <string name="app_name">Fundamentals Homework</string>

    <!-- Movies list screen -->
    <string name="movies_list_title">Movies app</string>
    <string name="movies_list_header_text">Movies app</string>
    <string name="movies_list_header_icon_description">Target icon</string>
    <string name="movies_list_header_image_description">Avengers poster</string>
    <string name="movies_list_allowed_age">13+</string>
    <string name="movies_list_film_genre">Action, Adventure, Fantasy</string>
    <string name="movies_list_rating_bar_description">Rating bar</string>
    <string name="movies_list_reviews_counter">125 Reviews</string>
    <string name="movies_list_film_name">Avengers: End Game</string>
    <string name="movies_list_film_time">137 MIN</string>

    <string name="movies_list_empty">There are no movies right now.</string>
    <!-- Movies list screen -->

    <!-- Movie Details screen -->
    <string name="movie_details_title">Details</string>
    <string name="movie_details_header_text">Back</string>
    <string name="movie_details_header_icon_description">Chevron left icon</string>
    <string name="movie_details_header_image_description">Avengers poster</string>
    <string name="movie_details_allowed_age">13+</string>
    <string name="movie_details_film_name">Avengers:\nEnd Game</string>
    <string name="movie_details_film_genre">Action, Adventure, Fantasy</string>
    <string name="movie_details_rating_bar_description">Rating bar</string>
    <string name="movie_details_reviews_counter">125 Reviews</string>
    <string name="movie_details_storyline_title">Storyline</string>
    <string name="movie_details_storyline_text">After the devastating events of Avengers: Infinity War, the universe is in ruins.
        With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="movie_details_cast_title">Cast</string>
    <string name="movie_details_actor_avatar_01">Robert Downey Jr.</string>
    <string name="movie_details_actor_avatar_02">Chris Evans</string>
    <string name="movie_details_actor_avatar_03">Mark Ruffalo</string>
    <string name="movie_details_actor_avatar_04">Chris Hemsworth</string>
    <string name="movie_details_actor_name_01">Robert\nDowney Jr.</string>
    <string name="movie_details_actor_name_02">Chris\nEvans</string>
    <string name="movie_details_actor_name_03">Mark\nRuffalo</string>
    <string name="movie_details_actor_name_04">Chris\nHemsworth</string>
    <!-- Movie Details screen -->

</resources>