<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMovieDetailsBackground"
    tools:context=".MainActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/ivMovieDetailsHeaderImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_details_header_image_description"
            app:srcCompat="@drawable/img_movie_details_header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_mask"
            app:layout_constraintTop_toTopOf="@+id/ivMovieDetailsHeaderImage"
            app:layout_constraintBottom_toBottomOf="@+id/ivMovieDetailsHeaderImage"
            app:layout_constraintStart_toStartOf="@+id/ivMovieDetailsHeaderImage"
            app:layout_constraintEnd_toEndOf="@+id/ivMovieDetailsHeaderImage"
            />

        <LinearLayout
            android:id="@+id/layMovieDetailsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:layout_marginStart="8dp"
            android:padding="8dp"
            android:gravity="center_vertical|start"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <ImageView
                android:id="@+id/ivMovieDetailsHeaderIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie_details_header_icon_description"
                app:srcCompat="@drawable/ic_chevron_left"
                />

            <TextView
                android:id="@+id/tvMovieDetailsHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical|start"
                android:textSize="@dimen/movie_details_back_size"
                android:textColor="@color/colorMovieDetailsHeaderText"
                android:text="@string/movie_details_header_text"
                />

        </LinearLayout>

        <TextView
            android:layout_width="@dimen/movie_details_allowed_age_space"
            android:layout_height="@dimen/movie_details_allowed_age_space"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:textSize="@dimen/movie_details_allowed_age_size"
            android:textColor="@color/colorMovieDetailsAllowedAgeText"
            android:text="@string/movie_details_allowed_age"
            android:background="@drawable/shape_rounded_rect_background_dark_blue"
            app:layout_constraintBottom_toTopOf="@+id/tvMovieDetailsFilmNameTopPart"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tvMovieDetailsFilmNameTopPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical|start"
            android:textStyle="bold"
            android:textSize="@dimen/movie_details_film_name_size"
            android:textColor="@color/colorMovieDetailsFilmName"
            android:text="@string/movie_details_film_name_top_part"
            app:layout_constraintBottom_toBottomOf="@+id/ivMovieDetailsHeaderImage"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tvMovieDetailsFilmNameBottomPart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical|start"
            android:textStyle="bold"
            android:textSize="@dimen/movie_details_film_name_size"
            android:textColor="@color/colorMovieDetailsFilmName"
            android:text="@string/movie_details_film_name_bottom_part"
            app:layout_constraintTop_toBottomOf="@+id/ivMovieDetailsHeaderImage"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tvMovieDetailsFilmGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical|start"
            android:textSize="@dimen/movie_details_film_genre_size"
            android:textColor="@color/colorMovieDetailsFilmGenre"
            android:text="@string/movie_details_film_genre"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailsFilmNameBottomPart"
            app:layout_constraintStart_toStartOf="parent"
            />

        <RatingBar
            android:id="@+id/rbMovieDetailsRatingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:scaleY="1.2"
            android:scaleX="1.2"
            android:transformPivotX="0dp"
            android:transformPivotY="0dp"
            android:isIndicator="true"
            android:numStars="5"
            android:rating="4"
            android:progressTint="@color/colorPink"
            android:secondaryProgressTint="@color/colorPink"
            android:progressBackgroundTint="@color/colorMovieDetailsFilmRating"
            android:contentDescription="@string/movie_details_rating_bar_description"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailsFilmGenre"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tvMovieDetailsReviewsCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:gravity="center_vertical|start"
            android:textStyle="bold"
            android:textSize="@dimen/movie_details_reviews_size"
            android:textColor="@color/colorMovieDetailsReviewsCounter"
            android:text="@string/movie_details_reviews_counter"
            app:layout_constraintTop_toTopOf="@+id/rbMovieDetailsRatingBar"
            app:layout_constraintBottom_toBottomOf="@+id/rbMovieDetailsRatingBar"
            app:layout_constraintStart_toEndOf="@id/rbMovieDetailsRatingBar"
            />

        <TextView
            android:id="@+id/tvMovieDetailsStorylineTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical|start"
            android:textStyle="bold"
            android:textSize="@dimen/movie_details_storyline_title_size"
            android:textColor="@color/colorMovieDetailsStorylineTitle"
            android:text="@string/movie_details_storyline_title"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailsReviewsCounter"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tvMovieDetailsStorylineText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_vertical"
            android:textSize="@dimen/movie_details_storyline_text_size"
            android:textColor="@color/colorMovieDetailsStorylineText"
            android:text="@string/movie_details_storyline_text"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailsStorylineTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tvMovieDetailsCastTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical|start"
            android:textStyle="bold"
            android:textSize="@dimen/movie_details_cast_title_size"
            android:textColor="@color/colorMovieDetailsCastTitle"
            android:text="@string/movie_details_cast_title"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailsStorylineText"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/ivMovieDetailsActorAvatar01"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/movie_details_actor_avatar_01"
            app:srcCompat="@drawable/img_robert_downey_jr"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailsCastTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ivMovieDetailsActorAvatar02"
            />

        <ImageView
            android:id="@+id/ivMovieDetailsActorAvatar02"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/movie_details_actor_avatar_02"
            app:srcCompat="@drawable/img_chris_evans"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailsCastTitle"
            app:layout_constraintStart_toEndOf="@id/ivMovieDetailsActorAvatar01"
            app:layout_constraintEnd_toStartOf="@+id/ivMovieDetailsActorAvatar03"
            />

        <ImageView
            android:id="@+id/ivMovieDetailsActorAvatar03"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/movie_details_actor_avatar_03"
            app:srcCompat="@drawable/img_mark_ruffalo"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailsCastTitle"
            app:layout_constraintStart_toEndOf="@id/ivMovieDetailsActorAvatar02"
            app:layout_constraintEnd_toStartOf="@+id/ivMovieDetailsActorAvatar04"
            />

        <ImageView
            android:id="@+id/ivMovieDetailsActorAvatar04"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/movie_details_actor_avatar_04"
            app:srcCompat="@drawable/img_chris_hemsworth"
            app:layout_constraintDimensionRatio="1,1"
            app:layout_constraintTop_toBottomOf="@+id/tvMovieDetailsCastTitle"
            app:layout_constraintStart_toEndOf="@id/ivMovieDetailsActorAvatar03"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tvMovieDetailsActorName01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:gravity="top|start"
            android:textStyle="bold"
            android:textSize="@dimen/movie_details_actor_name_size"
            android:textColor="@color/colorMovieDetailsActorName"
            android:text="@string/movie_details_actor_name_01"
            app:layout_constraintTop_toBottomOf="@+id/ivMovieDetailsActorAvatar01"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivMovieDetailsActorAvatar01"
            app:layout_constraintEnd_toEndOf="@+id/ivMovieDetailsActorAvatar01"
            />

        <TextView
            android:id="@+id/tvMovieDetailsActorName02"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:gravity="top|start"
            android:textStyle="bold"
            android:textSize="@dimen/movie_details_actor_name_size"
            android:textColor="@color/colorMovieDetailsActorName"
            android:text="@string/movie_details_actor_name_02"
            app:layout_constraintTop_toBottomOf="@+id/ivMovieDetailsActorAvatar02"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivMovieDetailsActorAvatar02"
            app:layout_constraintEnd_toEndOf="@+id/ivMovieDetailsActorAvatar02"
            />

        <TextView
            android:id="@+id/tvMovieDetailsActorName03"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:gravity="top|start"
            android:textStyle="bold"
            android:textSize="@dimen/movie_details_actor_name_size"
            android:textColor="@color/colorMovieDetailsActorName"
            android:text="@string/movie_details_actor_name_03"
            app:layout_constraintTop_toBottomOf="@+id/ivMovieDetailsActorAvatar03"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivMovieDetailsActorAvatar03"
            app:layout_constraintEnd_toEndOf="@+id/ivMovieDetailsActorAvatar03"
            />

        <TextView
            android:id="@+id/tvMovieDetailsActorName04"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:gravity="top|start"
            android:textStyle="bold"
            android:textSize="@dimen/movie_details_actor_name_size"
            android:textColor="@color/colorMovieDetailsActorName"
            android:text="@string/movie_details_actor_name_04"
            app:layout_constraintTop_toBottomOf="@+id/ivMovieDetailsActorAvatar04"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ivMovieDetailsActorAvatar04"
            app:layout_constraintEnd_toEndOf="@+id/ivMovieDetailsActorAvatar04"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>