<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layMoviesListItem"
    android:layout_width="@dimen/movies_list_card_width"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rounded_stroke_rect_background_dark_blue"
    android:elevation="@dimen/cardview_default_elevation"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivMoviesListHeaderImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/movies_list_header_image_description"
        app:shapeAppearanceOverlay="@style/ShapeableImageView"
        app:srcCompat="@drawable/img_movies_item_header_avengers"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_mask"
        app:layout_constraintTop_toTopOf="@+id/ivMoviesListHeaderImage"
        app:layout_constraintBottom_toBottomOf="@+id/ivMoviesListHeaderImage"
        app:layout_constraintStart_toStartOf="@+id/ivMoviesListHeaderImage"
        app:layout_constraintEnd_toEndOf="@+id/ivMoviesListHeaderImage"
        />

    <TextView
        android:id="@+id/tvMoviesListAllowedAge"
        android:layout_width="@dimen/movies_list_allowed_age_space"
        android:layout_height="@dimen/movies_list_allowed_age_space"
        android:layout_margin="8dp"
        android:gravity="center"
        android:textSize="@dimen/movies_list_allowed_age_size"
        android:textColor="@color/colorMoviesListAllowedAgeText"
        android:text="@string/movies_list_allowed_age"
        android:background="@drawable/shape_heavy_rounded_rect_background_dark_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/ivMoviesListIsFavorite"
        android:layout_width="@dimen/movies_list_love_icon_space"
        android:layout_height="@dimen/movies_list_love_icon_space"
        android:layout_margin="8dp"
        app:srcCompat="@drawable/ic_favorite_deselected"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvMoviesListFilmGenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical|start"
        android:textSize="@dimen/movies_list_film_genre_size"
        android:textColor="@color/colorMoviesListFilmGenre"
        android:text="@string/movies_list_film_genre"
        app:layout_constraintBottom_toTopOf="@+id/ivMoviesListRatingStar1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <ImageView
        android:id="@+id/ivMoviesListRatingStar1"
        android:layout_width="@dimen/movies_list_rating_star_space"
        android:layout_height="@dimen/movies_list_rating_star_space"
        android:layout_marginBottom="@dimen/space_8dp"
        android:layout_marginStart="@dimen/space_8dp"
        android:src="@drawable/ic_star_selected"
        app:layout_constraintBottom_toBottomOf="@+id/ivMoviesListHeaderImage"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivMoviesListRatingStar2"
        android:layout_width="@dimen/movies_list_rating_star_space"
        android:layout_height="@dimen/movies_list_rating_star_space"
        android:layout_marginBottom="@dimen/space_8dp"
        android:src="@drawable/ic_star_selected"
        app:layout_constraintBottom_toBottomOf="@+id/ivMoviesListHeaderImage"
        app:layout_constraintStart_toEndOf="@+id/ivMoviesListRatingStar1"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivMoviesListRatingStar3"
        android:layout_width="@dimen/movies_list_rating_star_space"
        android:layout_height="@dimen/movies_list_rating_star_space"
        android:layout_marginBottom="@dimen/space_8dp"
        android:src="@drawable/ic_star_selected"
        app:layout_constraintBottom_toBottomOf="@+id/ivMoviesListHeaderImage"
        app:layout_constraintStart_toEndOf="@+id/ivMoviesListRatingStar2"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivMoviesListRatingStar4"
        android:layout_width="@dimen/movies_list_rating_star_space"
        android:layout_height="@dimen/movies_list_rating_star_space"
        android:layout_marginBottom="@dimen/space_8dp"
        android:src="@drawable/ic_star_selected"
        app:layout_constraintBottom_toBottomOf="@+id/ivMoviesListHeaderImage"
        app:layout_constraintStart_toEndOf="@+id/ivMoviesListRatingStar3"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/ivMoviesListRatingStar5"
        android:layout_width="@dimen/movies_list_rating_star_space"
        android:layout_height="@dimen/movies_list_rating_star_space"
        android:layout_marginBottom="@dimen/space_8dp"
        android:src="@drawable/ic_star_selected"
        app:layout_constraintBottom_toBottomOf="@+id/ivMoviesListHeaderImage"
        app:layout_constraintStart_toEndOf="@+id/ivMoviesListRatingStar4"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvMoviesListReviewsCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_8dp"
        android:gravity="center_vertical|start"
        android:textStyle="bold"
        android:textSize="@dimen/movies_list_reviews_size"
        android:textColor="@color/colorMoviesListReviewsCounter"
        android:text="@string/movies_list_reviews_counter"
        app:layout_constraintTop_toTopOf="@+id/ivMoviesListRatingStar5"
        app:layout_constraintBottom_toBottomOf="@+id/ivMoviesListRatingStar5"
        app:layout_constraintStart_toEndOf="@id/ivMoviesListRatingStar5"
        />

    <TextView
        android:id="@+id/tvMoviesListFilmName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical|start"
        android:textStyle="bold"
        android:textSize="@dimen/movies_list_film_name_size"
        android:textColor="@color/colorMoviesListFilmName"
        android:text="@string/movies_list_film_name"
        app:layout_constraintTop_toBottomOf="@+id/ivMoviesListHeaderImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvMoviesListFilmDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical|start"
        android:textSize="@dimen/movies_list_film_time_size"
        android:textColor="@color/colorMoviesListFilmTime"
        android:text="@string/movies_list_film_time"
        app:layout_constraintTop_toBottomOf="@+id/tvMoviesListFilmName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>